2016-08-07  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-threadbackward.c: Include tree-inline.h
	(profitable_jump_thread_path): Use estimate_num_insns to estimate
	size of copied block; for cold paths reduce duplication.
	(find_jump_threads_backwards): Remove redundant tests.
	(pass_thread_jumps::gate): Enable for -Os.

2016-08-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/72816
	* stor-layout.c (layout_decl): Fix up formatting.
	(relayout_decl): Allow DECL to be FIELD_DECL.

2016-08-07  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.md (fix_trunc<mode>si2): Fix mode of reg.

2016-08-07  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* data-streamer-in.c (streamer_read_wide_int): New.
	(streamer_read_widest_int): Renamed function.
	* data-streamer-out.c (streamer_write_wide_int): New
	(streamer_write_widest_int): Renamed function.
	* lto-streamer-in.c (streamer_read_wi): Renamed and moved to
	data-stream-in.c.
	(input_cfg): Call renamed function.
	* lto-streamer-out.c (streamer_write_wi): Renamed and moved to
	data-stream-out.c.
	(output_cfg): Call renamed function.
	* data-streamer.h: Add declarations.

2016-08-08  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	* tree-ssa-ccp.c (extend_mask): New param sgn.
	Remove ORing with wi::mask.
	(get_default_value): Adjust call to extend_mask to pass sign.
	(evaluate_stmt): Likewise.

2016-08-06  Jakub Jelinek  <jakub@redhat.com>

	* gcov.c (handle_cycle): Use INTTYPE_MAXIMUM (int64_t) instead of
	INT64_MAX.

2016-08-06  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	* match.pd ((intptr_t) x eq/ne CST to x eq/ne (typeof x) cst): Disable
	transform if operand's type is pointer to function or method.

2016-08-05  Patrick Palka  <ppalka@gcc.gnu.org>

	PR tree-optimization/18046
	* tree-ssa-threadedge.c: Include cfganal.h.
	(simplify_control_statement_condition): If simplifying a
	GIMPLE_SWITCH, replace the index operand of the GIMPLE_SWITCH
	with the dominating ASSERT_EXPR before handing it off to VRP.